examples/error/hierachical_modelling_inlineembed1/parseError/error-GCCNONE.errorOutput
Hauptgruppe.xml:52: Error: no declaration found for element 'massERROR'
MBS.mbsim.xml:18: included from here
MBS.mbsx:8: [ecount=1] included from here
